# avail-core

./: Cargo.toml
core/: Cargo.toml
