[workspace]
resolver = "2"
members = [
	"core",
	"kate/recovery",
	"kate",
	"nomad/signature",
	"nomad/core",
	"nomad/base",
	"nomad/merkle",
]
[patch.crates-io]
# Substrate  (polkadot-v1.0.0).
sp-core = { git = "https://github.com/leouarz/substrate.git", branch = "ghali/pools" }
sp-core-hashing = { git = "https://github.com/leouarz/substrate.git", branch = "ghali/pools" }
sp-io = { git = "https://github.com/leouarz/substrate.git", branch = "ghali/pools" }
sp-api = { git = "https://github.com/leouarz/substrate.git", branch = "ghali/pools" }
sp-std = { git = "https://github.com/leouarz/substrate.git", branch = "ghali/pools" }
sp-application-crypto = { git = "https://github.com/leouarz/substrate.git", branch = "ghali/pools" }
sp-storage = { git = "https://github.com/leouarz/substrate.git", branch = "ghali/pools" }
sp-debug-derive = { git = "https://github.com/leouarz/substrate.git", branch = "ghali/pools" }
sp-arithmetic = { git = "https://github.com/leouarz/substrate.git", branch = "ghali/pools" }
sp-runtime = { git = "https://github.com/leouarz/substrate.git", branch = "ghali/pools" }
sp-trie = { git = "https://github.com/leouarz/substrate.git", branch = "ghali/pools" }
sp-runtime-interface = { git = "https://github.com/leouarz/substrate.git", branch = "ghali/pools" }
sp-weights = { git = "https://github.com/leouarz/substrate.git", branch = "ghali/pools" }
frame-support = { git = "https://github.com/leouarz/substrate.git", branch = "ghali/pools" }
sp-externalities = { git = "https://github.com/leouarz/substrate.git", branch = "ghali/pools" }
sp-inherents = { git = "https://github.com/leouarz/substrate.git", branch = "ghali/pools" }
sp-staking = { git = "https://github.com/leouarz/substrate.git", branch = "ghali/pools" }
sp-state-machine = { git = "https://github.com/leouarz/substrate.git", branch = "ghali/pools" }
sp-tracing = { git = "https://github.com/leouarz/substrate.git", branch = "ghali/pools" }
sp-version = { git = "https://github.com/leouarz/substrate.git", branch = "ghali/pools" }
sp-wasm-interface = { git = "https://github.com/leouarz/substrate.git", branch = "ghali/pools" }

[profile.dev.package]
nalgebra = { opt-level = 3 }
blst = { opt-level = 3 }
dusk-bls12_381 = { opt-level = 3 }
dusk-plonk = { opt-level = 3 }
dusk-jubjub = { opt-level = 3 }
dusk-bytes = { opt-level = 3 }
rayon = { opt-level = 3 }
rayon-core = { opt-level = 3 }
poly-multiproof = { opt-level = 3 }
ark-bls12-381 = { opt-level = 3 }
ark-ec = { opt-level = 3 }
ark-ff = { opt-level = 3 }
ark-poly = { opt-level = 3 }
ark-serialize = { opt-level = 3 }
ark-std = { opt-level = 3 }
merlin = { opt-level = 3 }
